# EcoMetaFlow

./: .gitignore  CHANGELOG.md  EcoMetaFlow 设计手册.md  EcoMetaFlow_README_v0.1.0.md  EcoMetaFlow_design_v0.1.0.md  README.md  pyproject.toml
examples/: envs.yaml  params.yaml  samples.csv
src/ecometa_flow/: __init__.py  cli.py  commands.py  config.py  envs.py  guards.py  installer.py  modules.py  parameters.py  reporting.py  requirements.py  runner.py  samples.py  scanner.py  summary.py  validation.py
src/ecometa_flow/data/: __init__.py  install.yaml  requirements.yaml
tests/: test_commands.py  test_envs.py  test_installer.py  test_requirements.py  test_samples.py  test_scanner.py  test_validation.py
设计文档/: EcoMetaFlow_Cursor_prompt_v0.1.0.md  EcoMetaFlow_codex_prompt_v0.2.0.md
