[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecometa-flow"
version = "0.1.0"
description = "Beginner-friendly bioinformatics workflow runner for environmental metagenomics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
ecometa-flow = "ecometa_flow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ecometa_flow = ["data/*.yaml"]
